src/twkTheme.scss
/* ... */
h2 {
  font-size: 3.1em !important;
}
h3 {
  font-size: 2.2em !important;
}
h4 {
  font-size: 1.7em !important;
}
h5 {
  font-size: 1.2em !important;
}
h6 {
  font-size: 1.1em !important;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 1rem;
  margin-top: 0.5rem !important;
  font-family: "Bungee", cursive;
  width: 100%;
  text-shadow: 2px 2px 4px black;
}
p {
  font-family: "Raleway", sans-serif;
  padding: 1rem;
  margin-bottom: 0rem !important;
  font-size: 22px;
  line-height: 1.5em;
}
code {
  font-family: "Roboto Mono", monospace;
}
.mainContent {
  .row {
    a {
      color: $turquoiseLink;
    }
    a:hover,
    a:active,
    a:visited {
      color: $themeVibrantYellowGreen;
    }
  }
}

.link-light-bg {
  a {
    color: $themeBlue !important;
  }
  a:hover,
  a:active,
  a:visited {
    color: $themeRed !important;
  }
}
.highlighter {
  background-color: #d8e052;
  padding: 1px 5px 1px 5px;
  border-radius: 0.25em;
}

// make links inside a row bold
.row a {
  font-weight: 800 !important;
}
.container-fluid a {
  font-weight: 600 !important;
}

// add margin spacing to top and bottom row
.row {
  max-width: 2000px; // prevent width from going full on large displays
  margin-left: auto !important;
  margin-right: auto !important;
  padding: 50px 25px !important;
}

// Reduce row padding for smaller mobile displays
@media (max-width: 450px) {
  .row {
    padding-left: 5px !important;
    padding-right: 5px !important;
  }
}

.light-text-shadow,
.light-text-shadow * {
  text-shadow: 2px 2px 4px white;
}
.row-slim-padding {
  padding: 13px 0px 0px 0px !important;
}
.icon-shadow-light-bg {
  filter: drop-shadow(2px 2px 2px #828900) !important;
}

@media (max-width: 536px) {
  h1 {
    font-size: 3em !important;
  }
  h2 {
    font-size: 2.4em !important;
  }
  h3 {
    font-size: 1.9em !important;
  }
  h4 {
    font-size: 1.7em !important;
  }
  h5 {
    font-size: 1.2em !important;
  }
  h6 {
    font-size: 1.1em !important;
  }
}

@media (max-width: 450px) {
  h1 {
    font-size: 2.46em !important;
  }
  h2 {
    font-size: 2.2em !important;
  }
}

@media (max-width: 360px) {
  h1 {
    font-size: 2.2em !important;
  }
  h2 {
    font-size: 2em !important;
  }
}

// *********************
// NAVIGATION AND NAVIGATION DROP DOWN MENUS
// *********************
.timknab-logo {
  height: 50px;
  filter: drop-shadow(2px 2px 2px black) !important;
}

.custom-nav-toggle {
  font-size: 1.5em;
  color: #f4fd5b;
}
.custom-nav-toggle:active {
  font-size: 1.5em;
  color: #fff;
}

.nav-link {
  font-size: 2rem;
  font-weight: bolder;
  text-shadow: 2px 2px 4px black;
  font-family: "Bungee", cursive;
}

// customize font awesome icon for nav
// makes icon more centered and aligned with text
// .primary-nav-icon {
//   margin: 6px;
//   bottom: 3px;
//   position: relative;
// }

// add hover to font awesome icon on link hover
// learn more: https://stackoverflow.com/questions/6966180/change-element-style-on-hover-another-element
.resume-cta div a:hover > svg {
  filter: drop-shadow(2px 2px 2px black) !important;
}

// Adjust line height for primary navigation items
.navbar-collapse {
  line-height: 2.1em;
}

// Change hamburger menu background color
.navbar-dark .navbar-toggler {
  background-color: #ac6fe2;
  border: unset !important;
  padding: 10px;
}
.navbar-toggler {
  box-shadow: 2px 2px 2px #8500ff61;
}
.navbar-toggler:active {
  border: unset !important;
}

// Add drop shadow to nav "About" dropdown arrow
.dropdown-toggle::after {
  filter: drop-shadow(2px 2px 2px black) !important;
}

// Center adjust "About" drop down menu heading for mobile
@media (max-width: 992px) {
  .navbar-collapse {
    margin-bottom: 20px;
  }
  .nav-dropdown-adjustment {
    margin-left: 31px;
  }
  #collasible-nav-dropdown-about {
    position: relative;
    right: 10px;
  }
}

.dropdown-item {
  font-family: "Raleway", cursive;
  font-size: 1.5em;
  text-align: center !important;
  padding: 10px 0px !important;
}
.dropdown-menu.show {
  background-clip: padding-box;
  background-color: whitesmoke;
  border: 2px solid rgba(0, 0, 0, 0.15);
  border-radius: 0.25rem;
  font-size: 1.2rem;
  padding: 20px 5px;
}
@media (max-width: 450px) {
  .dropdown-item,
  .download-resume {
    font-size: 1.3em !important;
  }
  #download-word {
    display: none;
  }
  #responsive-navbar-nav {
    width: 100%;
  }
}
.navbar.navbar-expand-lg.navbar-dark.bg-primary {
  background: $themePurple;
  background: linear-gradient(
    90deg,
    $themePurple 0%,
    $themeGreen 53%,
    $themeOrange 89%
  );
  color: #b6b6b6;
}
.navbar-dark .navbar-nav .nav-link {
  color: $themeLightBackground !important;
}
.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:active,
.navbar-dark .navbar-nav .nav-link:focus {
  color: $turquoiseLink !important;
}
// Set hover and active styles for nav dropdown
.theme-twk-custom-nav-dropdown > .dropdown-menu > a:hover,
.dropdown-item.active,
.dropdown-item:active,
a.dropdown-item.active {
  background: #813db4cf !important;
  color: white !important;
  text-shadow: 2px 2px 4px black;
  border-radius: 0.25rem;
}

// Add line height to dropdown nav
navbar-nav .dropdown-menu {
  line-height: 1.5em;
}

// Expand download resume button to full width
.download-resume-row {
  width: 100%;
}
.download-resume {
  background-color: $themeLightOrange !important;
  border-radius: 0.5rem;
  padding: 12px 25px !important;
  margin: 0px !important;
  font-size: 1.4em;
}
.download-resume:hover,
.download-resume:active {
  background-color: $themePurple !important;
  color: white !important;
  text-shadow: 2px 2px 4px black;
}
// Adjust download resume text spacing
.download-resume span {
  position: relative;
  top: 2px;
  left: 5px;
}

// Set card margins and ensure last paragraph has no padding
.card {
  margin: auto 15px;
  color: $themeDarkBackground;
  background-color: $themeVibrantYellowGreen !important;
  border: 1px solid $themeVibrantYellowGreen !important;
}
/* ... */

